apps/panopticode/daily/fe/addprefix-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-test-bucket
  namespace: minio-dev
spec:
  chain:
    middlewares:
    - name: replace-path
      namespace: minio-dev
    - name: add-prefix
      namespace: minio-dev
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: replace-path
  namespace: minio-dev
spec:
  replacePathRegex:
    regex: "^/$"
    replacement: "/index.html"
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: add-prefix
  namespace: minio-dev
spec:
  addPrefix:
    prefix: "/test-bucket"
