apps/panopticode/daily/fe/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: daily-fe-service
  namespace: panopticode
spec:
  selector:
    app: daily-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
