apps/panopticode/daily/fe/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: daily-fe
  namespace: minio-dev
spec:
  routes:
  - kind: Rule
    match: Host(`daily.k8s.jeromeswannack.com`)
    middlewares:
    - name: add-test-bucket
      namespace: minio-dev
    services:
    - kind: Service
      name: minio-dev-service
      namespace: minio-dev
      port: 9000
      scheme: http
